--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/eslint . && ./node_modules/.bin/mocha ./test.js",
     "start": "node ./index.js",
-    "postinstall": "napa lightningnetwork/lnd#v0.3-alpha:lnd"
+    "postinstall": "napa lightningnetwork/lnd#v0.4-beta:lnd"
   },
   "repository": "https://github.com/Matt-Jensen/lnrpc",
   "keywords": [
