--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/eslint . && ./node_modules/.bin/mocha ./test/**/*.test.js",
     "start": "node ./index.js",
-    "postinstall": "bin/lnrpc-install"
+    "postinstall": "./bin/lnd-target | xargs printf \"lightningnetwork/lnd#%s:lnd\" | xargs napa"
   },
   "repository": "https://github.com/Matt-Jensen/lnrpc",
   "keywords": [
